--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,11 +1,125 @@
-* {
-  margin: 0 auto; }
-
 nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
   min-height: 8vh;
-  background-color: pink; }
+  background-color: transparent;
+  font-size: .8rem;
+  font-family: 'Manrope-Bold', sans-serif; }
+
+.navlinks {
+  display: flex;
+  justify-content: space-around; }
+
+.navlinks li {
+  list-style: none;
+  margin-top: 10px;
+  width: 20%;
+  margin-bottom: 10px; }
+
+.burger-menu {
+  display: none; }
+
+.burger-menu div {
+  width: 25px;
+  height: 3px;
+  background-color: black;
+  margin: 5px;
+  border-radius: 3px;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1); }
+
+.burger-menu .line2 {
+  width: 18px; }
+
+.burger-menu .line3 {
+  width: 20px; }
+
+@media (max-width: 768px) {
+  body {
+    overflow-x: hidden; }
+
+  .main-logo {
+    width: 30%;
+    margin-top: 0px; }
+
+  .navlinks {
+    position: absolute;
+    margin-bottom: 20px;
+    right: 0px;
+    height: 92vh;
+    top: 8vh;
+    background-color: pink;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in; }
+
+  .navlinks li {
+    opacity: 0; }
+
+  .burger-menu {
+    display: block;
+    cursor: pointer; } }
+.burger-expand {
+  transform: translateX(0%); }
+
+@keyframes LinksFading {
+  from {
+    opacity: 0;
+    transform: translateX(50px); }
+  to {
+    opacity: 1;
+    transform: translateX(0px); } }
+.toggleBurger .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px); }
+
+.toggleBurger .line2 {
+  opacity: 0; }
+
+.toggleBurger .line3 {
+  width: 25px;
+  transform: rotate(45deg) translate(-5px, -6px); }
+
+@media (max-width: 1024px) {
+  .navlinks {
+    width: 50%;
+    color: black; }
+
+  .main-logo {
+    width: 50%; } }
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box; }
+
+@font-face {
+  font-family: 'Manrope', sans-serif;
+  src: url("fonts/manrope-ttf/web/manrope-regular.woff") format(woff), url("fonts/manrope-ttf/web/manrope-bold.woff") format(woff); }
+@font-face {
+  font-family: 'Made Saonara', serif;
+  src: url("fonts/made-saonara/MADE SAONARA PERSONAL USE.otf") format(otf); }
+body {
+  font-family: 'Manrope', sans-serif; }
+
+h1 {
+  font-family: 'Made Saonara', sans-serif; }
+
+.main-logo {
+  width: 45%;
+  margin: 10px 0 10px 0; }
+
+a {
+  color: black;
+  text-decoration: none; }
+
+a:hover {
+  color: white;
+  text-decoration: none; }
+
+.splash {
+  height: 92vh;
+  background: url("/images/background.png"); }
 
 /*# sourceMappingURL=main.css.map */
