--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,14 +17,11 @@
 <body>
     <div class="container-fluid">
         <div class="row"> 
-            <nav>
-                <div class="logo">
-                    <img src="images/logo/LOGO2.svg" alt="My Logo">
-                </div>
-            
-                <h1 class="hide">Navigation</h1>
-                <ul>
-                    <li>
+            <nav class="col-lg-12 col-sm-12">
+              <img src="images/logo/LOGO2.svg" class="main-logo" alt="My Logo">
+                <h1 class="d-none">Navigation</h1>
+                <ul class="navlinks">
+                    <li> 
                         <a href="/">WORK</a>
                     </li>
                     <li>
@@ -34,7 +31,17 @@
                         <a href="#">CONTACT</a>
                     </li>
                 </ul>
+                <div class="burger-menu">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
             </nav>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row splash">
+            
         </div>
     </div>
     <main>
@@ -43,6 +50,8 @@
 
 
 <script type="module" src="js/main.js"></script>
+<script type="module" src="js/burger-menu.js"></script>
+
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
