--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -39,9 +39,16 @@
             </nav>
         </div>
     </div>
-    <div class="container">
+    <div class="jumbotron-fluid">
+        <h1 class="d-none">Splash</h1>
         <div class="row splash">
-            
+            <div class="col-sm-12">
+                <div class="splash-art">
+                    <img src="images/splash-img.png" alt="Splash Art">
+                </div>
+                <h1>Hi, I'm Syrrel</h1>
+                <pclass="display-1"><strong>I am passionate about</strong> user experience</p>
+            </div>
         </div>
     </div>
     <main>
