--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,8 +19,10 @@
     src: url('fonts/made-saonara/MADE SAONARA PERSONAL USE.otf') format(otf);
 }
 
-body {
+html, body {
     font-family: 'Manrope', sans-serif;
+    height: 100%;
+
 }
 
 h1{
@@ -30,6 +32,7 @@ h1{
 .main-logo {
     width: 45%;
     margin: 10px 0 10px 0;
+    left: 10px;
 }
 
 a {
@@ -43,6 +46,42 @@ a:hover {
 }
 
 .splash{
-    height: 92vh;
+    height: 100vh;
     background: url('/images/background.png');
+    background-size: cover;
+    background-position: right 0% bottom 45%;
+    top: -80px;
+    position: relative;
+    padding: 25px;
 }
+
+.splash-art img{
+    display: flex;
+    margin: 0 auto;
+    width: 60%;
+    justify-content: center;
+    margin-top: 100px;
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+
+}
+
+@keyframes floating {
+    0% {
+        transform: translateY(0px);
+      }
+      50% {
+        transform: translateY(-15px);
+      }
+      100% {
+        transform: translateY(0px);
+      }
+}
+
+.splash h1 {
+    margin-top: 20px;
+    font-size: 2rem;
+}
+
