--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -47,7 +47,11 @@
                     <img src="images/splash-img.png" alt="Splash Art">
                 </div>
                 <h1>Hi, I'm Syrrel</h1>
-                <pclass="display-1"><strong>I am passionate about</strong> user experience</p>
+                    <p class="display-5"><strong>I am passionate about</strong>
+                        <span id="demo"></span>
+                        <span class='type-cursor'>|</span>
+                    </p>
+                    <p class="display-5"><strong>This is a curation of some of my best works</strong></p>
             </div>
         </div>
     </div>
@@ -58,6 +62,7 @@
 
 <script type="module" src="js/main.js"></script>
 <script type="module" src="js/burger-menu.js"></script>
+<script type="module" src="js/typing-splash.js"></script>
 
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
