--- a/public/css/main.css
+++ b/public/css/main.css
@@ -36,7 +36,7 @@ nav {
 .burger-menu .line3 {
   width: 20px; }
 
-@media (max-width: 768px) {
+@media (min-width: 375px) {
   body {
     overflow-x: hidden; }
 
@@ -54,8 +54,8 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
-    transform: translateX(100%);
+    width: 50%;
+    transform: translateX(105%);
     transition: transform 0.5s ease-in; }
 
   .navlinks li {
@@ -66,7 +66,7 @@ nav {
     cursor: pointer;
     margin-right: 0px; } }
 .burger-expand {
-  transform: translateX(0%); }
+  transform: translateX(5%); }
 
 @keyframes LinksFading {
   from {
@@ -85,13 +85,118 @@ nav {
   width: 25px;
   transform: rotate(45deg) translate(-5px, -6px); }
 
-@media (max-width: 1024px) {
+@media (min-width: 576px) {
+  body {
+    overflow-x: hidden; }
+
+  .main-logo {
+    width: 30%;
+    margin-top: 0px; }
+
+  .navlinks {
+    position: absolute;
+    margin-bottom: 20px;
+    right: 0px;
+    height: 92vh;
+    top: 8vh;
+    background-color: pink;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    transform: translateX(105%);
+    transition: transform 0.5s ease-in; }
+
+  .navlinks li {
+    opacity: 0; }
+
+  .burger-menu {
+    display: block;
+    cursor: pointer;
+    margin-right: 0px; } }
+.burger-expand {
+  transform: translateX(5%); }
+
+@keyframes LinksFading {
+  from {
+    opacity: 0;
+    transform: translateX(50px); }
+  to {
+    opacity: 1;
+    transform: translateX(0px); } }
+.toggleBurger .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px); }
+
+.toggleBurger .line2 {
+  opacity: 0; }
+
+.toggleBurger .line3 {
+  width: 25px;
+  transform: rotate(45deg) translate(-5px, -6px); }
+
+@media (min-width: 768px) {
+  .main-logo {
+    width: 10%;
+    margin-top: 0px; }
+
+  .navlinks {
+    position: absolute;
+    margin-bottom: 20px;
+    right: 0px;
+    height: 92vh;
+    top: 8vh;
+    background-color: pink;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    transform: translateX(105%);
+    transition: transform 0.5s ease-in; }
+
+  .navlinks li {
+    opacity: 0; }
+
+  .burger-menu {
+    display: block;
+    cursor: pointer;
+    margin-right: 0px; }
+
+  .splash {
+    margin-top: -50px; }
+
+  .splash-art img {
+    height: 40%;
+    display: none; } }
+.burger-expand {
+  transform: translateX(5%); }
+
+@keyframes LinksFading {
+  from {
+    opacity: 0;
+    transform: translateX(50px); }
+  to {
+    opacity: 1;
+    transform: translateX(0px); } }
+.toggleBurger .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px); }
+
+.toggleBurger .line2 {
+  opacity: 0; }
+
+.toggleBurger .line3 {
+  width: 25px;
+  transform: rotate(45deg) translate(-5px, -6px); }
+
+@media (min-width: 992px) {
   .navlinks {
     width: 50%;
     color: black; }
 
   .main-logo {
-    width: 50%; } }
+    width: 0%; }
+
+  .splash-art img {
+    width: 30%; } }
 * {
   margin: 0 auto;
   padding: 0px;
@@ -132,10 +237,10 @@ a:hover {
   position: relative;
   padding: 25px; }
 
-.splash-art img {
+.splash img {
   display: flex;
   margin: 0 auto;
-  width: 60%;
+  width: 70%;
   justify-content: center;
   margin-top: 100px;
   animation-name: floating;
