--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,7 +17,7 @@
 <body>
     <div class="container-fluid">
         <div class="row"> 
-            <nav class="col-lg-12 col-sm-12">
+            <nav class="col-lg-12 col-md-12 col-sm-12">
               <img src="images/logo/LOGO2.svg" class="main-logo" alt="My Logo">
                 <h1 class="d-none">Navigation</h1>
                 <ul class="navlinks">
@@ -42,7 +42,7 @@
     <div class="jumbotron-fluid">
         <h1 class="d-none">Splash</h1>
         <div class="row splash">
-            <div class="col-sm-12">
+            <div class="col-sm-12 col-lg-12 col-md-12">
                 <div class="splash-art">
                     <img src="images/splash-img.png" alt="Splash Art">
                 </div>
