--- a/sass/modules/_nav.scss
+++ b/sass/modules/_nav.scss
@@ -7,7 +7,7 @@ nav {
     background-color: transparent;
     font-size: .8rem;
     font-family: 'Manrope-Bold', sans-serif;
-    position: absolute;
+    position: relative;
     z-index: 1;
 }
 
