--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -44,7 +44,7 @@
         <div class="row splash">
             <div class="col-sm-12 col-lg-12 col-md-12">
                 <div class="splash-art">
-                    <img src="images/splash-img.png" alt="Splash Art">
+                    <img src="images/splash-img.png" class="splash-hand" alt="Splash Art">
                 </div>
                 <h1>Hi, I'm Syrrel</h1>
                     <p class="display-5"><strong>I am passionate about</strong>
