--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,7 +6,7 @@ nav {
   background-color: transparent;
   font-size: .8rem;
   font-family: 'Manrope-Bold', sans-serif;
-  position: absolute;
+  position: relative;
   z-index: 1; }
 
 .navlinks {
@@ -36,167 +36,6 @@ nav {
 .burger-menu .line3 {
   width: 20px; }
 
-@media (min-width: 375px) {
-  body {
-    overflow-x: hidden; }
-
-  .main-logo {
-    width: 30%;
-    margin-top: 0px; }
-
-  .navlinks {
-    position: absolute;
-    margin-bottom: 20px;
-    right: 0px;
-    height: 92vh;
-    top: 8vh;
-    background-color: pink;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 50%;
-    transform: translateX(105%);
-    transition: transform 0.5s ease-in; }
-
-  .navlinks li {
-    opacity: 0; }
-
-  .burger-menu {
-    display: block;
-    cursor: pointer;
-    margin-right: 0px; } }
-.burger-expand {
-  transform: translateX(5%); }
-
-@keyframes LinksFading {
-  from {
-    opacity: 0;
-    transform: translateX(50px); }
-  to {
-    opacity: 1;
-    transform: translateX(0px); } }
-.toggleBurger .line1 {
-  transform: rotate(-45deg) translate(-5px, 6px); }
-
-.toggleBurger .line2 {
-  opacity: 0; }
-
-.toggleBurger .line3 {
-  width: 25px;
-  transform: rotate(45deg) translate(-5px, -6px); }
-
-@media (min-width: 576px) {
-  body {
-    overflow-x: hidden; }
-
-  .main-logo {
-    width: 30%;
-    margin-top: 0px; }
-
-  .navlinks {
-    position: absolute;
-    margin-bottom: 20px;
-    right: 0px;
-    height: 92vh;
-    top: 8vh;
-    background-color: pink;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 50%;
-    transform: translateX(105%);
-    transition: transform 0.5s ease-in; }
-
-  .navlinks li {
-    opacity: 0; }
-
-  .burger-menu {
-    display: block;
-    cursor: pointer;
-    margin-right: 0px; } }
-.burger-expand {
-  transform: translateX(5%); }
-
-@keyframes LinksFading {
-  from {
-    opacity: 0;
-    transform: translateX(50px); }
-  to {
-    opacity: 1;
-    transform: translateX(0px); } }
-.toggleBurger .line1 {
-  transform: rotate(-45deg) translate(-5px, 6px); }
-
-.toggleBurger .line2 {
-  opacity: 0; }
-
-.toggleBurger .line3 {
-  width: 25px;
-  transform: rotate(45deg) translate(-5px, -6px); }
-
-@media (min-width: 768px) {
-  .main-logo {
-    width: 10%;
-    margin-top: 0px; }
-
-  .navlinks {
-    position: absolute;
-    margin-bottom: 20px;
-    right: 0px;
-    height: 92vh;
-    top: 8vh;
-    background-color: pink;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 50%;
-    transform: translateX(105%);
-    transition: transform 0.5s ease-in; }
-
-  .navlinks li {
-    opacity: 0; }
-
-  .burger-menu {
-    display: block;
-    cursor: pointer;
-    margin-right: 0px; }
-
-  .splash {
-    margin-top: -50px; }
-
-  .splash-art img {
-    height: 40%;
-    display: none; } }
-.burger-expand {
-  transform: translateX(5%); }
-
-@keyframes LinksFading {
-  from {
-    opacity: 0;
-    transform: translateX(50px); }
-  to {
-    opacity: 1;
-    transform: translateX(0px); } }
-.toggleBurger .line1 {
-  transform: rotate(-45deg) translate(-5px, 6px); }
-
-.toggleBurger .line2 {
-  opacity: 0; }
-
-.toggleBurger .line3 {
-  width: 25px;
-  transform: rotate(45deg) translate(-5px, -6px); }
-
-@media (min-width: 992px) {
-  .navlinks {
-    width: 50%;
-    color: black; }
-
-  .main-logo {
-    width: 0%; }
-
-  .splash-art img {
-    width: 30%; } }
 * {
   margin: 0 auto;
   padding: 0px;
@@ -210,7 +49,8 @@ nav {
   src: url("fonts/made-saonara/MADE SAONARA PERSONAL USE.otf") format(otf); }
 html, body {
   font-family: 'Manrope', sans-serif;
-  height: 100%; }
+  height: 100%;
+  width: 100vw; }
 
 h1 {
   font-family: 'Made Saonara', sans-serif; }
@@ -233,14 +73,14 @@ a:hover {
   background: url("/images/background.png");
   background-size: cover;
   background-position: right 0% bottom 45%;
-  top: -80px;
-  position: relative;
+  top: -60px;
+  position: absolute;
   padding: 25px; }
 
-.splash img {
+.splash-hand {
   display: flex;
   margin: 0 auto;
-  width: 70%;
+  width: 80%;
   justify-content: center;
   margin-top: 100px;
   animation-name: floating;
@@ -268,5 +108,127 @@ a:hover {
 @keyframes blink {
   100% {
     opacity: 1; } }
+@media (min-width: 320px) {
+  body {
+    overflow-x: hidden; }
+
+  nav {
+    margin: 10px; }
+
+  .main-logo {
+    width: 50%; }
+
+  .navlinks {
+    position: absolute;
+    margin-bottom: 20px;
+    right: 0px;
+    height: 100vh;
+    top: -10px;
+    background-color: #8E391E;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    transform: translateX(110%);
+    transition: transform 0.5s ease-in; }
+
+  .navlinks li {
+    opacity: 0;
+    font-size: .7rem; }
+
+  .navlinks li {
+    background: linear-gradient(to bottom, var(--mainColor) 0%, var(--mainColor) 100%);
+    background-position: 0 100%;
+    background-repeat: repeat-x;
+    background-size: 4px 4px;
+    color: #000;
+    text-decoration: none;
+    transition: background-size .2s; }
+    .navlinks li :root {
+      --mainColor: #ff9800; }
+
+  .navlinks li:hover {
+    background-size: 4px 50px; }
+
+  .burger-menu {
+    display: block;
+    cursor: pointer;
+    margin-right: 0px; }
+
+  .burger-menu div {
+    height: 3px; }
+
+  .splash {
+    height: 120%; }
+
+  .splash-hand {
+    margin-top: 130px;
+    width: 80%; }
+
+  h1 {
+    font-size: 2rem !important; }
+
+  p {
+    font-size: .7rem; } }
+.burger-expand {
+  transform: translateX(10%); }
+
+@keyframes LinksFading {
+  from {
+    opacity: 0;
+    transform: translateX(50px); }
+  to {
+    opacity: 1;
+    transform: translateX(0px); } }
+.toggleBurger .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
+  background-color: white; }
+
+.toggleBurger .line2 {
+  opacity: 0; }
+
+.toggleBurger .line3 {
+  width: 25px;
+  transform: rotate(45deg) translate(-5px, -6px);
+  background-color: white; }
+
+@media (min-width: 375px) {
+  .splash {
+    height: 120%; }
+
+  .navlinks {
+    transform: translateX(105%); }
+
+  .splash-hand {
+    margin-top: 170px;
+    margin-bottom: 35px; }
+
+  .splash h1 {
+    font-size: 3rem; }
+
+  .splash p {
+    font-size: 1rem; } }
+.burger-expand {
+  transform: translateX(5%); }
+
+@media screen and (min-width: 768px) {
+  body {
+    overflow-x: hidden; }
+
+  nav {
+    padding: 20px; }
+
+  .main-logo {
+    width: 40%; }
+
+  .burger-menu {
+    margin-right: 10px; }
+
+  .navlinks li {
+    font-size: 1rem; }
+
+  .splash-hand {
+    margin-top: 220px;
+    width: 50%; } }
 
 /*# sourceMappingURL=main.css.map */
