--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -1,38 +1,78 @@
-@media  (min-width: 375px){
+
+@media (min-width: 320px) {
     body {
-        overflow-x: hidden;
+        overflow-x: hidden;    
+    }
+    nav{
+        margin: 10px;
     }
     .main-logo{
-        width: 30%;
-        margin-top: 0px;
+        width: 50%;
     }
     .navlinks {
         position: absolute;
         margin-bottom: 20px;
         right: 0px;
-        height: 92vh;
-        top: 8vh;
-        background-color: pink;
+        height: 100vh;
+        top: -10px;
+        background-color: #8E391E;
         display: flex;
         flex-direction: column;
         align-items: center; 
         width: 50%;
-        transform: translateX(105%);
+        transform: translateX(110%);
         transition: transform 0.5s ease-in;
     }
     .navlinks li {
         opacity: 0;
+        font-size: .7rem;
+    }
+    .navlinks li {
+        :root {
+            --mainColor: #ff9800;
+          }
+        background:
+            linear-gradient(
+                to bottom, var(--mainColor) 0%,
+                var(--mainColor) 100%
+     );
+         background-position: 0 100%;
+         background-repeat: repeat-x;
+         background-size: 4px 4px;
+         color: #000;
+         text-decoration: none;
+         transition: background-size .2s;
+    }
+    .navlinks li:hover{
+
+            background-size: 4px 50px;
+
     }
     .burger-menu {
         display: block;
         cursor: pointer;
         margin-right: 0px;
     }
-
+    .burger-menu div{
+        height: 3px;
+    }
+    .splash{
+        height: 120%;
+    }
+    .splash-hand {
+        margin-top: 130px;
+        width: 80%;
+    }
+    h1 {
+        font-size: 2rem !important;
+    }
+    p{
+        font-size: .7rem;
+    }
 }
 
 .burger-expand {
-    transform: translateX(5%);
+    transform: translateX(10%);
 
 }
 
@@ -49,6 +89,7 @@
 
 .toggleBurger .line1{
     transform: rotate(-45deg) translate(-5px, 6px);
+    background-color: white;
 }
 .toggleBurger .line2{
     opacity: 0;
@@ -56,150 +97,56 @@
 .toggleBurger .line3{
     width: 25px;
     transform: rotate(45deg) translate(-5px, -6px);
+    background-color: white;
+}
+
+
+@media (min-width: 375px) {
+    .splash{
+        height: 120%;
+
+    }
+    .navlinks{
+        transform: translateX(105%);
+    }
+    .splash-hand{
+        margin-top: 170px;
+        margin-bottom: 35px;
+    }
+    .splash h1{
+        font-size: 3rem;
+    }
+    .splash p{
+        font-size: 1rem;
+    }
+}
+
+
+.burger-expand {
+    transform: translateX(5%);
 
 }
 
-@media (min-width: 576px) { 
+
+@media screen and (min-width: 768px) {
     body {
         overflow-x: hidden;
     }
+    nav {
+        padding: 20px;
+    }
     .main-logo{
-        width: 30%;
-        margin-top: 0px;
-    }
-    .navlinks {
-        position: absolute;
-        margin-bottom: 20px;
-        right: 0px;
-        height: 92vh;
-        top: 8vh;
-        background-color: pink;
-        display: flex;
-        flex-direction: column;
-        align-items: center; 
-        width: 50%;
-        transform: translateX(105%);
-        transition: transform 0.5s ease-in;
-    }
-    .navlinks li {
-        opacity: 0;
+        width: 40%;
     }
     .burger-menu {
-        display: block;
-        cursor: pointer;
-        margin-right: 0px;
+        margin-right: 10px;
+    }
+    .navlinks li {
+        font-size: 1rem;
     }
 
-}
-
-.burger-expand {
-    transform: translateX(5%);
-
-}
-
-@keyframes LinksFading {
-    from{
-        opacity: 0;
-        transform: translateX(50px);
-    }
-    to{
-        opacity: 1;
-        transform: translateX(0px);
-    }
-}
-
-.toggleBurger .line1{
-    transform: rotate(-45deg) translate(-5px, 6px);
-}
-.toggleBurger .line2{
-    opacity: 0;
-}
-.toggleBurger .line3{
-    width: 25px;
-    transform: rotate(45deg) translate(-5px, -6px);
-
-}
-
-
-//Tablet display
-@media (min-width: 768px) {
-    .main-logo{
-    width: 10%;
-    margin-top: 0px;
-}
-.navlinks {
-    position: absolute;
-    margin-bottom: 20px;
-    right: 0px;
-    height: 92vh;
-    top: 8vh;
-    background-color: pink;
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    width: 50%;
-    transform: translateX(105%);
-    transition: transform 0.5s ease-in;
-}
-.navlinks li {
-    opacity: 0;
-}
-.burger-menu {
-    display: block;
-    cursor: pointer;
-    margin-right: 0px;
-}
-.splash{
-    margin-top: -50px;
-}
-
-.splash-art img{
-    height: 40%;
-    display: none;
-}
-
-}
-
-.burger-expand {
-    transform: translateX(5%);
-
-}
-
-@keyframes LinksFading {
-    from{
-        opacity: 0;
-        transform: translateX(50px);
-    }
-    to{
-        opacity: 1;
-        transform: translateX(0px);
-    }
-}
-
-.toggleBurger .line1{
-    transform: rotate(-45deg) translate(-5px, 6px);
-}
-.toggleBurger .line2{
-    opacity: 0;
-}
-.toggleBurger .line3{
-    width: 25px;
-    transform: rotate(45deg) translate(-5px, -6px);
-
-}
-
-
-
-//bigger display ?
-@media (min-width: 992px) {
-    .navlinks {
+    .splash-hand{
+        margin-top: 220px;
         width: 50%;
-        color: black;
     }
-    .main-logo {
-        width: 0%;
-    }
-    .splash-art img {
-        width: 30%;
-    }
- }
+}
