--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,7 +23,7 @@ html, body {
     font-family: 'Manrope', sans-serif;
     height: 100%;
     width: 100vw;
-
+    overflow-x: hidden;
 }
 
 h1{
@@ -31,7 +31,7 @@ h1{
 }
 
 .main-logo {
-    width: 45%;
+    width: 50%;
     margin: 10px 0 10px 0;
     left: 10px;
 }
