--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -31,7 +31,18 @@
                         <a href="#">CONTACT</a>
                     </li>
                 </ul>
-                <div class="burger-menu">
+                   <ul class="navlinks2">
+                    <li> 
+                        <a href="/">WORK</a>
+                    </li>
+                    <li>
+                        <a href="#">ABOUT</a>
+                    </li>
+                    <li>
+                        <a href="#">CONTACT</a>
+                    </li>
+                </ul>
+                <div class="burger-menu d-sm-block d-lg-none d-xl-none">
                     <div class="line1"></div>
                     <div class="line2"></div>
                     <div class="line3"></div>
@@ -44,7 +55,7 @@
         <div class="row splash">
             <div class="col-sm-12 col-lg-12 col-md-12">
                 <div class="splash-art">
-                    <img src="images/splash-img.png" class="splash-hand" alt="Splash Art">
+                    <img src="images/splash-img.png" class="splash-hand float-lg-right" alt="Splash Art">
                 </div>
                 <h1>Hi, I'm Syrrel</h1>
                     <p class="display-5"><strong>I am passionate about</strong>
