--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -14,12 +14,12 @@
         margin-bottom: 20px;
         right: 0px;
         height: 100vh;
+        width: 55%;
         top: -10px;
         background-color: #8E391E;
         display: flex;
         flex-direction: column;
         align-items: center; 
-        width: 50%;
         transform: translateX(110%);
         transition: transform 0.5s ease-in;
     }
@@ -27,26 +27,11 @@
         opacity: 0;
         font-size: .7rem;
     }
-    .navlinks li {
-        :root {
-            --mainColor: #ff9800;
-          }
-        background:
-            linear-gradient(
-                to bottom, var(--mainColor) 0%,
-                var(--mainColor) 100%
-     );
-         background-position: 0 100%;
-         background-repeat: repeat-x;
-         background-size: 4px 4px;
-         color: #000;
-         text-decoration: none;
-         transition: background-size .2s;
-    }
     .navlinks li:hover{
-
-            background-size: 4px 50px;
-
+        background-size: 4px 50px;
+    }
+    .navlinks2 {
+        display: none;
     }
     .burger-menu {
         display: block;
@@ -66,13 +51,14 @@
     h1 {
         font-size: 2rem !important;
     }
-    p{
+    .splash p{
         font-size: .7rem;
+        line-height: 10px;
     }
 }
 
 .burger-expand {
-    transform: translateX(10%);
+    transform: translateX(-10%);
 
 }
 
@@ -102,12 +88,18 @@
 
 
 @media (min-width: 375px) {
+    body{
+        overflow-x: hidden;    
+    }
     .splash{
         height: 120%;
 
     }
     .navlinks{
         transform: translateX(105%);
+    }
+    .navlinks2 {
+        display: none;
     }
     .splash-hand{
         margin-top: 170px;
@@ -117,8 +109,10 @@
         font-size: 3rem;
     }
     .splash p{
-        font-size: 1rem;
+        font-size: .8rem;
+        line-height: 10px;
     }
+  
 }
 
 
@@ -128,7 +122,7 @@
 }
 
 
-@media screen and (min-width: 768px) {
+@media (min-width: 768px) {
     body {
         overflow-x: hidden;
     }
@@ -139,14 +133,139 @@
         width: 40%;
     }
     .burger-menu {
-        margin-right: 10px;
+        margin-right: 20px;
+        margin-top: -10px;
+    }
+    .navlinks2 {
+        display: none;
     }
     .navlinks li {
         font-size: 1rem;
     }
-
+    .splash {
+        height: 120%;
+    }
     .splash-hand{
         margin-top: 220px;
         width: 50%;
+    }
+    .splash h1{
+        margin-top: 100px;
+        font-size: 2rem !important;
+        margin-left: 30px;
+        margin-bottom: 10px;
+    }
+    .splash p {
+        font-size: 1rem;
+        line-height: 10px;
+        margin-left: 30px;
+    }
+}
+
+@media (min-width: 1200px){
+    body{
+        overflow-x: hidden;
+    }
+    nav {
+        padding: 0px;
+    }
+    .main-logo{
+        width: 20%;
+ 
+    }
+    .burger-menu {
+        display: flex;
+    }
+    .navlinks {
+       display: none;
+    }
+    .navlinks li {
+        display: inline-flex !important;
+        justify-content: space-around;
+
+    }
+    .navlinks2 {
+        display: flex;
+        justify-content: space-around;
+        margin-right: 20px;
+        z-index: 2;
+        font-size: 1rem;
+
+    }
+    .navlinks2 li{
+        display: inline-flex;
+        margin: 30px;
+    }
+    .splash{
+        display: flex;
+    }
+    .splash-hand {
+        width: 30%;
+        display: inline-flex;
+        justify-content: flex-end;
+        margin-right: 130px;
+        margin-top: 160px;
+    }
+    .type-cursor {
+        font-size: 1.5rem;
+    }
+    .splash {
+        height: 120%;
+    }
+    .splash h1{
+        margin-top: 400px;
+        font-size: 4rem !important;
+        margin-left: 30px;
+        margin-bottom: 10px;
+    }
+    .splash p {
+        font-size: 1.5rem;
+        line-height: 20px;
+        margin-left: 30px;
+    }
+    .burger-expand {
+        display: none;
+    }
+}
+
+@media (min-width: 1920px) {
+    body{
+        overflow-x: hidden;
+    }
+    nav {
+        padding: 0px;
+        padding-right: 30px;
+
+    }
+    .main-logo{
+        width: 15%;
+        margin-right: 30px;
+    }
+    .burger-menu {
+        display: flex;
+    }
+    .navlinks {
+       display:none;
+    }
+    .navlinks li {
+        display: inline-flex !important;
+        justify-content: space-around;
+
+    }
+    .navlinks2 {
+        display: flex;
+        justify-content: space-around;
+        margin-right: 0px;
+
+    }
+    .navlinks2 li{
+        display: inline-flex;
+        margin: 30px;
+    }
+    .splash {
+        height: 120%;
+    }
+    .splash h1 p{
+        margin-top: 300px;
     }
 }
