--- a/views/index.html
+++ b/views/index.html
@@ -23,38 +23,31 @@
 </head>
 
 <body>
-    <header>
-    <div class="container-fluid clearfix">
+    <div class="container-fluid">
         <div class="row"> 
-            <nav class="col-lg-12 col-md-12 col-sm-12"  id="navbar">
+            <nav class="col-lg-12 col-md-12 col-sm-12" id="navbar">
               <img src="images/logo/LOGO2.svg" class="main-logo" alt="My Logo">
                 <h1 class="d-none">Navigation</h1>
                 <ul class="navlinks">
                     <li> 
-                        <a href="/">HOME</a>
-                    </li>
-                    <li> 
-                        <a href="/#work">WORK</a>
+                        <a href="/">WORK</a>
                     </li>
                     <li>
-                        <a href="/#about">ABOUT</a>
+                        <a href="#">ABOUT</a>
                     </li>
                     <li>
-                        <a href="/#contact">CONTACT</a>
+                        <a href="#">CONTACT</a>
                     </li>
                 </ul>
                    <ul class="navlinks2">
                     <li> 
-                        <a href="/">HOME</a>
-                    </li>
-                    <li> 
-                        <a href="#work">WORK</a>
+                        <a href="/">WORK</a>
                     </li>
                     <li>
-                        <a href="#about">ABOUT</a>
+                        <a href="#">ABOUT</a>
                     </li>
                     <li>
-                        <a href="#contact">CONTACT</a>
+                        <a href="#">CONTACT</a>
                     </li>
                 </ul>
                 <div class="burger-menu d-sm-block d-lg-none d-xl-none">
@@ -65,18 +58,11 @@
             </nav>
         </div>
     </div>
-    </header>
     
     <!-- from splash to beyond -->
+    <div>
 
-    <main>
-       
-        {{{ body }}}
-       
-    </main>
-
- 
-
+    </div>
 
 
 <script type="module" src="js/main.js"></script>
