--- a/views/home.hbs
+++ b/views/home.hbs
@@ -19,13 +19,35 @@
 </div>
 
 
-<section id="work" class="container panel">
-   <div class="row">
-      <div class="col portGrid">Left column</div>
-      <div class="col portGrid">Center column</div>
-      <div class="col portGrid">Right column</div> 
+<!-- Portfolio Gallery -->
+<section id="work" class="container panel work">
+     {{#each piece}}
+    <div class="row">
+         <div class="p1 user-panel col-lg-8">
+            <div id="p1">
+                <button class="projLink" href="{{ ID }}">
+                    <h4>{{ ProjTitle }}</h4>
+                </button>
+            </div>
+        </div>
+    </div>
+    {{/each}}
+
+
+    <!-- Popup -->
+    <div class="lightbox container col-sm-12 col-lg-12">
+        <div class="row">
+        <span class="close">Exit</span>
+        <div class="sidebar">
+            <img src="" alt="Poster">
+        </div>
+
+        <div class="lb-content container-fluid col-sm-12 col-lg-12">
+        </div>
+        </div>
     </div>
 </section>
+
 
 
 
