--- a/views/home.hbs
+++ b/views/home.hbs
@@ -22,29 +22,28 @@
 <!-- Portfolio Gallery -->
 <section id="work" class="container panel work">
     {{#each piece}}
-    <div class="row"></div>
+    <div class="row">
          <div class="p1 user-panel col-lg-8">
             <div id="p1">
                 <img src="{{ DispImg }}" width="350">
-                <a class="projLink" href="{{ ID }}">
+                <button class="projLink" href="{{ ID }}">
                     <h4>{{ ProjName }}</h4>
-                </a>
+                </button>
             </div>
         </div>
     </div>
     {{/each}}
-
+    </div>
 
     <!-- Popup -->
-    <div class="lightbox container col-sm-12 col-lg-12">
+    <div class="lightbox container col-sm-12 col-md-12 col-lg-12">
         <div class="row">
-        <span class="close">Exit</span>
-        <div class="sidebar">
-            <img src="" alt="Poster">
-        </div>
-
-        <div class="lb-content container-fluid col-sm-12 col-lg-12">
-        </div>
+            <div class="sidebar">
+            <span class="close">Exit</span>
+            <div class="lb-content container-fluid col-sm-12 col-lg-12">
+                <h4>{{Title}}</h4>
+            </div>
+            </div>
         </div>
     </div>
 </section>
